src/tests/fixtures/custom_scalars/TagAttachedToWrongNode.ts.expected
-----------------
INPUT
----------------- 
/** @gqlScalar Matrix */
function Foo() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/custom_scalars/TagAttachedToWrongNode.ts:1:5 - error: `@gqlScalar` can only be used on type alias declarations.

1 /** @gqlScalar Matrix */
      ~~~~~~~~~~~~~~~~~~
